# owli-detector-train-keras

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: balance_ba_mvp_mapillary.yaml  balance_ba_v2_hazard_mapillary_slice01.yaml  balance_ba_v2_hazard_obstacle4_ground_slice02.yaml  balance_ba_v2_hazard_od_slice01.yaml  coco_replay_ba_mvp_stage4.yaml  crop_ba_mvp_stage3_small_obstacles.yaml  efficientdet_lite2_ba_mvp_stage3.yaml  efficientdet_lite2_ba_mvp_stage3_plus_crops.yaml  efficientdet_lite2_ba_mvp_stage4.yaml  efficientdet_lite2_ba_v2_mvp.yaml  efficientdet_lite2_ba_v2_mvp_aug.yaml  efficientdet_lite2_coco128.yaml  efficientdet_lite2_coco2017.yaml  efficientdet_lite2_obstacle4.yaml  efficientdet_lite2_smoke.yaml  label_map.yaml  merge_ba_mvp_stage2_obstacle4_mapillary.yaml  merge_ba_mvp_stage2_obstacle4_od.yaml  merge_ba_mvp_stage3_balanced_multisource.yaml  merge_ba_mvp_stage3_plus_crops.yaml  merge_ba_mvp_stage4_with_coco_replay.yaml  merge_ba_v2_hazard_slice01_mapillary_od.yaml  merge_ba_v2_hazard_slice02_mapillary_od_obstacle4_ground.yaml  merge_ba_v2_hazard_slice02_mapillary_od_obstacle4_ground_materialize.yaml  merge_obstacle4_gt_pseudo.yaml  train_detector.yaml  train_detector_builtins_smoke.yaml  train_detector_smoke.yaml
docs/: BA_MVP_Stage3_Baseline.md  BA_MVP_Stage3_Crops.md  BA_MVP_Stage3_Plus_Crops_Baseline.md  BA_MVP_Stage3_Product_Gate.md  BA_MVP_Stage4_Baseline.md  BA_MVP_Stage4_Replay_Pipeline.md  BA_v1_Labelset.md  BA_v2_Augmentation_Feasibility.md  BA_v2_Hazard_Labelset.md  BA_v2_MVP_Baseline.md  webui.md  (+22 more)
(+137 files in other folders)
